--- a/app/src/main/res/layout/fragment_profie.xml
+++ b/app/src/main/res/layout/fragment_profie.xml
@@ -1,19 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AF1515"
-    tools:context=".ProfieFragment">
+    tools:context=".ProfieFragment"
+    android:background="#DDD5CB">
 
 
-    <TextView
+
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:text="Profile Fragment"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/biographyCardView"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="@+id/textViewRank"
+                    app:layout_constraintStart_toStartOf="@+id/textViewRank"
+                    app:layout_constraintTop_toBottomOf="@id/textViewRank">
+
+                    <TextView
+                        android:id="@+id/textViewBiography"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Hello!!\nI'm first user"
+                        android:maxLines="5"
+                        android:textAlignment="center"
+                        android:textSize="18sp" />
+
+                </androidx.cardview.widget.CardView>
+
+
+                <ImageView
+                    android:id="@+id/imageViewBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="192dp"
+                    android:scaleType="fitXY"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_view_for_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    app:cardCornerRadius="100dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
+                    app:layout_constraintEnd_toEndOf="@id/imageViewBackground"
+                    app:layout_constraintStart_toStartOf="@+id/imageViewBackground"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewBackground">
+
+                    <ImageView
+                        android:id="@+id/rounded_image_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        tools:srcCompat="@tools:sample/avatars" />
+
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/textViewUserName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="UserName"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/card_view_for_image"
+                    app:layout_constraintStart_toStartOf="@+id/card_view_for_image"
+                    app:layout_constraintTop_toBottomOf="@+id/card_view_for_image" />
+
+                <TextView
+                    android:id="@+id/textViewRank"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Rank: "
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="@+id/textViewUserName"
+                    app:layout_constraintStart_toStartOf="@+id/textViewUserName"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/biographyCardView">
+
+                    <Button
+                        android:id="@+id/buttonFriendList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="32dp"
+                        android:text="Friend List"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/buttonMyPosts"
+                        android:layout_width="343dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="32dp"
+                        android:text="My Posts"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/buttonChangePassword"
+                        android:layout_width="343dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="32dp"
+                        android:text="Change Password"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/buttonEditProfile"
+                        android:layout_width="343dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="32dp"
+                        android:text="Edit Profile"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/buttonLogOut"
+                        android:layout_width="343dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="32dp"
+                        android:text="Log Out"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
