--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -15,6 +15,7 @@
             android:layout_width="275dp"
             android:layout_height="266dp"
             android:layout_marginTop="40dp"
+            android:onClick="selectedImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
