--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".HomeFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    tools:context=".MainPage">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutPost"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:animateLayoutChanges="true">
+
+            <ImageView
+                android:id="@+id/postImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImageViewUser"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="20dp"
+                android:src="@drawable/testbackground"
+                app:civ_border_color="#434343"
+                app:civ_border_width="1dp"/>
+
+            <Button
+                android:id="@+id/buttonUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/circleImageViewUser"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="20dp"
+                android:layout_toEndOf="@+id/circleImageViewUser"
+                android:backgroundTint="#00000000"
+                android:gravity="start|center_vertical"
+                android:paddingLeft="1dp"
+                android:text="Username"
+                android:textColor="#303030"
+                android:textSize="20dp"/>
+
+            <LinearLayout
+                android:id="@+id/radioButtonLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="45dp"
+                android:animateLayoutChanges="true"
+                android:gravity="center"
+                android:orientation="vertical">
+
+
+                <ImageButton
+                    android:id="@+id/imageButtonComment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/circularbackground"
+                    android:backgroundTint="#C0CBC5"
+                    android:src="@drawable/chat_24px" />
+
+                <TextView
+                    android:id="@+id/textViewScoreAverage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/circularcornerbackground"
+                    android:backgroundTint="#C0CBC5"
+                    android:drawableStart="@drawable/small_grade"
+                    android:elegantTextHeight="true"
+                    android:text="score"
+                    android:textAlignment="center"
+                    android:textSize="20sp" />
+
+                <ImageButton
+                    android:id="@+id/imageButtonScore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/circularbackground"
+                    android:backgroundTint="#C0CBC5"
+                    android:src="@drawable/grade_24px" />
+
+                <RadioGroup
+                    android:id="@+id/scoreRadioGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+
+                    <RadioButton
+                        android:id="@+id/imageButtonScore5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/circularbackground"
+                        android:backgroundTint="#C0CBC5"
+                        android:button="@drawable/counter_5_24px" />
+
+                    <RadioButton
+                        android:id="@+id/imageButtonScore4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circularbackground"
+                        android:backgroundTint="#C0CBC5"
+                        android:button="@drawable/counter_4_24px" />
+
+                    <RadioButton
+                        android:id="@+id/imageButtonScore3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circularbackground"
+                        android:backgroundTint="#C0CBC5"
+                        android:button="@drawable/counter_3_24px" />
+
+                    <RadioButton
+                        android:id="@+id/imageButtonScore2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circularbackground"
+                        android:backgroundTint="#C0CBC5"
+                        android:button="@drawable/counter_2_24px" />
+
+                    <RadioButton
+                        android:id="@+id/imageButtonScore1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circularbackground"
+                        android:backgroundTint="#C0CBC5"
+                        android:button="@drawable/counter_1_24px" />
+                </RadioGroup>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        android:layout_gravity="center"/>
+        app:menu="@menu/homemenu"/>
 
-</FrameLayout>
+</LinearLayout>
