--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,162 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:context=".MainPage">
+    tools:context=".HomeFragment"
+    android:background="#DDD5CB">
 
-
-
-    <FrameLayout
-        android:id="@+id/frame_layout"
+    <RelativeLayout
+        android:id="@+id/relativeLayoutPost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:animateLayoutChanges="true">
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutPost"
+        <ImageView
+            android:id="@+id/postImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:animateLayoutChanges="true">
+            android:layout_height="match_parent"/>
 
-            <ImageView
-                android:id="@+id/postImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageViewUser"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="20dp"
+            android:src="@drawable/testbackground"
+            app:civ_border_color="#434343"
+            app:civ_border_width="1dp"/>
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageViewUser"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_margin="20dp"
-                android:src="@drawable/testbackground"
-                app:civ_border_color="#434343"
-                app:civ_border_width="1dp"/>
+        <Button
+            android:id="@+id/buttonUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/circleImageViewUser"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/circleImageViewUser"
+            android:backgroundTint="#00000000"
+            android:gravity="start|center_vertical"
+            android:paddingLeft="1dp"
+            android:text="Username"
+            android:textColor="#303030"
+            android:textSize="20dp"/>
 
-            <Button
-                android:id="@+id/buttonUserName"
+        <LinearLayout
+            android:id="@+id/radioButtonLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="11dp"
+            android:layout_marginBottom="130dp"
+            android:animateLayoutChanges="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+
+            <ImageButton
+                android:id="@+id/imageButtonComment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/circleImageViewUser"
-                android:layout_alignParentTop="true"
                 android:layout_marginTop="20dp"
-                android:layout_toEndOf="@+id/circleImageViewUser"
-                android:backgroundTint="#00000000"
-                android:gravity="start|center_vertical"
-                android:paddingLeft="1dp"
-                android:text="Username"
-                android:textColor="#303030"
-                android:textSize="20dp"/>
+                android:background="@drawable/circularbackground"
+                android:backgroundTint="#C0CBC5"
+                android:src="@drawable/chat_24px" />
 
-            <LinearLayout
-                android:id="@+id/radioButtonLayout"
+            <TextView
+                android:id="@+id/textViewScoreAverage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="9dp"
-                android:layout_marginBottom="45dp"
-                android:animateLayoutChanges="true"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginTop="20dp"
+                android:background="@drawable/circularcornerbackground"
+                android:backgroundTint="#C0CBC5"
+                android:drawableStart="@drawable/small_grade"
+                android:elegantTextHeight="true"
+                android:text="score"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
+            <ImageButton
+                android:id="@+id/imageButtonScore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/circularbackground"
+                android:backgroundTint="#C0CBC5"
+                android:src="@drawable/grade_24px" />
 
-                <ImageButton
-                    android:id="@+id/imageButtonComment"
+            <RadioGroup
+                android:id="@+id/scoreRadioGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone">
+
+                <RadioButton
+                    android:id="@+id/imageButtonScore5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:background="@drawable/circularbackground"
                     android:backgroundTint="#C0CBC5"
-                    android:src="@drawable/chat_24px" />
+                    android:button="@drawable/counter_5_24px" />
 
-                <TextView
-                    android:id="@+id/textViewScoreAverage"
+                <RadioButton
+                    android:id="@+id/imageButtonScore4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/circularcornerbackground"
-                    android:backgroundTint="#C0CBC5"
-                    android:drawableStart="@drawable/small_grade"
-                    android:elegantTextHeight="true"
-                    android:text="score"
-                    android:textAlignment="center"
-                    android:textSize="20sp" />
-
-                <ImageButton
-                    android:id="@+id/imageButtonScore"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/circularbackground"
                     android:backgroundTint="#C0CBC5"
-                    android:src="@drawable/grade_24px" />
+                    android:button="@drawable/counter_4_24px" />
 
-                <RadioGroup
-                    android:id="@+id/scoreRadioGroup"
+                <RadioButton
+                    android:id="@+id/imageButtonScore3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="gone">
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/circularbackground"
+                    android:backgroundTint="#C0CBC5"
+                    android:button="@drawable/counter_3_24px" />
 
-                    <RadioButton
-                        android:id="@+id/imageButtonScore5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/circularbackground"
-                        android:backgroundTint="#C0CBC5"
-                        android:button="@drawable/counter_5_24px" />
+                <RadioButton
+                    android:id="@+id/imageButtonScore2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/circularbackground"
+                    android:backgroundTint="#C0CBC5"
+                    android:button="@drawable/counter_2_24px" />
 
-                    <RadioButton
-                        android:id="@+id/imageButtonScore4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/circularbackground"
-                        android:backgroundTint="#C0CBC5"
-                        android:button="@drawable/counter_4_24px" />
+                <RadioButton
+                    android:id="@+id/imageButtonScore1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/circularbackground"
+                    android:backgroundTint="#C0CBC5"
+                    android:button="@drawable/counter_1_24px" />
+            </RadioGroup>
 
-                    <RadioButton
-                        android:id="@+id/imageButtonScore3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/circularbackground"
-                        android:backgroundTint="#C0CBC5"
-                        android:button="@drawable/counter_3_24px" />
-
-                    <RadioButton
-                        android:id="@+id/imageButtonScore2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/circularbackground"
-                        android:backgroundTint="#C0CBC5"
-                        android:button="@drawable/counter_2_24px" />
-
-                    <RadioButton
-                        android:id="@+id/imageButtonScore1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/circularbackground"
-                        android:backgroundTint="#C0CBC5"
-                        android:button="@drawable/counter_1_24px" />
-                </RadioGroup>
-
-            </LinearLayout>
+        </LinearLayout>
 
 
-        </RelativeLayout>
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:menu="@menu/homemenu"/>
-
-</LinearLayout>
+    </RelativeLayout>
+</FrameLayout>
