--- a/app/src/main/res/layout/fragment_profie.xml
+++ b/app/src/main/res/layout/fragment_profie.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfieFragment"
-    android:background="#DDD5CB">
+    android:background="#DDD5CB"
+    android:id="@+id/profile_layout">
 
 
 
